[package]
name = "chooch"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1.0.1"
futures = "0.3"
reqwest = "0.11"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"