[package]
name = "chooch"
version = "0.2.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytefmt = "0.1.7"
bytes = "1.0.1"
dynamic-pool = "0.2"
futures = "0.3"
indicatif = "0.16"
rand = "0.8"
hyper = { version = "0.14", features = ["runtime", "client", "http1"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.20"